--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>My Personal Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <script src="script.js"></script>
+    <title>My Portfolio</title>
 </head>
+
 <body>
-    <h1>Hello World!</h1>
+    <section>
+        <header>
+            <a href="#" class="logo">DK</a>
+            <ul class="navbar">
+                <li><a href="#"></a>Home</li>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Skills</li>
+                <li><a href="#"></a>Contact Me</li>
+            </ul>
+        </header>
+        <div class="container">
+            <div class="contentBox">
+                <h2>I AM, <br">
+                </h2>
+                <h2><span>DAN KOSKEI</span></h2>
+                <p>A passionate full stack developer</p>
+                <a href="Software-Engineering-Hybrid-Course-web.pdf" download="Resume">Resume</a>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
